<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityList">

    <Button
        android:id="@+id/btnRegresarHome"
        android:layout_width="123dp"
        android:layout_height="38dp"
        android:backgroundTint="#FFFEFE"
        android:text="@string/btnRegresar"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/txtSearch"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegresarHome" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="408dp"
        android:layout_height="486dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/txtSearch"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnCompartirContacto"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btnCompartirContacto"
        app:layout_constraintEnd_toStartOf="@+id/btnVerImagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

    <Button
        android:id="@+id/btnVerImagen"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btnVerImagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCompartirContacto"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btnEliminar"
        app:layout_constraintEnd_toStartOf="@+id/btnActualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCompartirContacto" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#2196F3"
        android:text="@string/btnActualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEliminar"
        app:layout_constraintTop_toBottomOf="@+id/btnVerImagen" />

</androidx.constraintlayout.widget.ConstraintLayout>