<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/fotoContacto"
        android:layout_width="195dp"
        android:layout_height="187dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Spinner
        android:id="@+id/spinnerPais"
        android:layout_width="258dp"
        android:layout_height="54dp"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoContacto" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="302dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPais" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:numeric="integer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtNota"
        android:layout_width="300dp"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/nota"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <Button
        android:id="@+id/btnGuardarContacto"
        android:layout_width="126dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#009688"
        android:text="Guardar"
        app:layout_constraintEnd_toStartOf="@+id/btnListaContacto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNota" />

    <Button
        android:id="@+id/btnListaContacto"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#2196F3"
        android:text="Lista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGuardarContacto"
        app:layout_constraintTop_toBottomOf="@+id/txtNota" />

    <Button
        android:id="@+id/btnAgregarPais"
        android:layout_width="48dp"
        android:layout_height="57dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#009688"
        android:text="+"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toEndOf="@+id/spinnerPais"
        app:layout_constraintTop_toBottomOf="@+id/fotoContacto" />

    <EditText
        android:id="@+id/editTextCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Código"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editTextPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="País"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnTomarFoto"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/black"
        app:icon="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoContacto" />
</androidx.constraintlayout.widget.ConstraintLayout>